# Doctorado

./: .gitignore  Dockerfile  README.md  app.py  datos_pozos.csv  genera_project.py  main.py  pyproject.toml  requirements.txt  run.py  runtime.txt
.streamlit/: config.toml
config/: __init__.py  access.py  default.json  geometry.py  parameters.py
data/input/: benchmark.h5  real.h5
funtions/: get_phi.py  mesh.py  operators.py  runtime.py  step_time.py  utils.py
io/: data_loader.py
postprocessing/: create_btc.py
preprocessing/: preprocess.py
scripts/: mrmt_bfr_tesis.py  mrmt_new_block.py  tesis_bfr_final_data.py  tesis_bfr_final_mp4.py  tesis_bfr_paralelo.py
simulation_output/: config.json
view/: animation.py  plot.py
